corrections et ajustement du process de fonctionneme